Linked to the correct stylesheets

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="assets/sass/materialize.scss"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
 
   <!-- Import custom syles -->
-  <link type="text/css" rel="stylesheet" href="assets/sass/style.scss"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -17,7 +17,7 @@
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
-  
+
   <title>Document</title>
 </head>
 <body>
