pivot to use skeleton framework

--- a/index.html
+++ b/index.html
@@ -18,13 +18,32 @@
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/bin/materialize.min.js"></script>
 
   <!-- Link to our own JS here -->
 
   <title>Document</title>
 </head>
 <body>
-
+  <nav>
+    <div class="container">
+      <div class="navbar-fixed">
+        <div class="nav-wrapper">
+          <!-- <form class=" right nav-search">
+              <input id="search" type="search">
+          </form> -->
+          <form class="right nav-search">
+            <input>
+          </form>
+          <a href="#" class="brand-logo">Logo</a>
+          <ul id="nav-mobile" class=" right hide-on-med-and-down s6">
+            <li><a href="#">Films</a></li>
+            <li><a href="#">My Lists</a></li>
+            <li><a href="#">Sign In</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
 </body>
 </html>
