--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
         <div class="row">
           <nav>
             <a href="#" class="u-pull-left" id="logo">LOGO</a>
-            <form>
               <div class="row">
-                <div class="three columns u-pull-right">
-                <input class="u-full-width" type="search" placeholder="search..." id="search">
-              </div>
-            </form>
-            <ul class="nav-items">
-              <li class="u-pull-right"><a href="#">Films</a></li>
-              <li class="u-pull-right"><a href="#">My List</a></li>
-              <li class="u-pull-right"><a href="#">Sign In</a></li>
-            </ul>
+                  <div class="three columns u-pull-right nav-search">
+                    <input class="u-full-width" type="search" placeholder="Search..." id="search">
+                  </div>
+              <ul class="nav-items">
+                <li class="u-pull-right"><a href="#">Films</a></li>
+                <li class="u-pull-right"><a href="#">My List</a></li>
+                <li class="u-pull-right"><a href="#">Sign In</a></li>
+              </ul>
+            </div>
           </nav>
         </div>
       </div>
