Rearranged the nav items

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <input class="u-full-width" type="search" placeholder="Search..." id="search">
                   </div>
               <ul class="nav-items">
-                <li class="u-pull-right"><a href="#">Films</a></li>
-                <li class="u-pull-right"><a href="#">My List</a></li>
                 <li class="u-pull-right"><a href="#">Sign In</a></li>
+                <li class="u-pull-right"><a href="#">My Lists</a></li>
+                <li class="u-pull-right"><a href="#">Films</a></li>
               </ul>
             </div>
           </nav>
