Started structuring the main content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
 
   <!-- Import custom syles -->
-  <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="css/style.css">
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -30,23 +30,37 @@
 </head>
 <body>
   <div class="row">
-    <div class="jumbotron u-full-max-width">
+    <div class="jumbotron">
       <div class="container">
         <div class="row">
-          <nav>
-            <a href="#" class="u-pull-left" id="logo">LOGO</a>
-              <div class="row">
-                  <div class="three columns u-pull-right nav-search">
-                    <input class="u-full-width" type="search" placeholder="Search..." id="search">
-                  </div>
-              <ul class="nav-items">
-                <li class="u-pull-right"><a href="#">Sign In</a></li>
-                <li class="u-pull-right"><a href="#">My Lists</a></li>
-                <li class="u-pull-right"><a href="#">Films</a></li>
-              </ul>
-            </div>
-          </nav>
+          <div class="nav">
+            <div class="logo u-pull-left"></div>
+            <ul class="nav-items">
+              <li><a href="#">FILMS</a></li>
+              <li><a href="#">MY LIST</a></li>
+              <li><a href="#">SIGN IN</a></li>
+              <li>
+                <input type="search" id="search" placeholder="Search..." class="nav-search">
+              </li>
+            </ul>
+          </div>
         </div>
+        <div class="row">
+            <h1 class="tagline">Lorem Ipsum <br> Dolar Sit Amet</h1>
+        </div>
+        <div class="row btn-container">
+          <a class="button" href="#">Start A List</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <h2 class="subheading">In Theaters Now</h2>
+    </div>
+    <div class="row poster-contianer">
+      <div class="three columns">
+
       </div>
     </div>
   </div>
