Created a sticky footer

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
   <title>Document</title>
 </head>
 <body>
+  <!-- jumbotron starts here -->
   <div class="row">
     <div class="jumbotron">
       <div class="container">
+        <!-- Navbar starts here -->
         <div class="row">
           <div class="nav">
             <div class="logo u-pull-left"></div>
@@ -54,15 +56,32 @@
       </div>
     </div>
   </div>
+  <!-- Page's main content starts here -->
   <div class="container">
     <div class="row">
       <h2 class="subheading">In Theaters Now</h2>
     </div>
     <div class="row poster-contianer">
-      <div class="three columns">
-
+      <!-- DYNAMICALLY RENDER THE POSTERS HERE -->
+      <div class="three columns image-container">
+        <img src="http://placehold.it/200x300" alt="">
+      </div>
+      <div class="three columns image-container">
+        <img src="http://placehold.it/200x300" alt="">
+      </div>
+      <div class="three columns image-container">
+        <img src="http://placehold.it/200x300" alt="">
+      </div>
+      <div class="three columns image-container">
+        <img src="http://placehold.it/200x300" alt="">
       </div>
     </div>
   </div>
+  <!-- .push div is used to make the sticky footer -->
+  <div class="push"></div>
+  <!-- footer starts here -->
+  <footer>
+    <p class="footer-content">&copy; Group Name 2017</p>
+  </footer>
 </body>
 </html>
