Added scaffolding for the "list buttons"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1 class="tagline">Lorem Ipsum <br> Dolar Sit Amet</h1>
         </div>
         <div class="row btn-container">
-          <a class="button" href="#">Start A List</a>
+          <button class="call-button" href="#" id="call-to-action">Start A List</button>
         </div>
       </div>
     </div>
@@ -61,18 +61,62 @@
     <div class="row">
       <h2 class="subheading">In Theaters Now</h2>
     </div>
-    <div class="row poster-contianer">
+    <div class="row poster-container">
       <!-- DYNAMICALLY RENDER THE POSTERS HERE -->
       <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
         <img src="http://placehold.it/200x300" alt="">
       </div>
       <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
         <img src="http://placehold.it/200x300" alt="">
       </div>
       <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
         <img src="http://placehold.it/200x300" alt="">
       </div>
       <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
+        <img src="http://placehold.it/200x300" alt="">
+      </div>
+      <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
+        <img src="http://placehold.it/200x300" alt="">
+      </div>
+      <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
+        <img src="http://placehold.it/200x300" alt="">
+      </div>
+      <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
+        <img src="http://placehold.it/200x300" alt="">
+      </div>
+      <div class="three columns image-container">
+        <div class="action-buttons">
+          <button class="list-button">ADD TO "WATCHED LIST"</button>
+          <button class="list-button">ADD TO A LIST</button>
+        </div>
         <img src="http://placehold.it/200x300" alt="">
       </div>
     </div>
