Added a file to the js directory

--- a/index.html
+++ b/index.html
@@ -127,5 +127,9 @@
   <footer>
     <p class="footer-content">&copy; Group Name 2017</p>
   </footer>
+  <!-- modal is here, but doesn't display until an event listener is clicked -->
+  <div class="modal">
+
+  </div>
 </body>
 </html>
