Removed some scaffolding

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
   <!-- Link to our own JS here -->
-  <script type="text/javascript" src="js/app/logic.js"></script>
-  <script type="text/javascript" src="js/app/modal.js"></script>
+  <!-- <script type="text/javascript" src="js/app/logic.js"></script> -->
+  <!-- <script type="text/javascript" src="js/app/modal.js"></script> -->
+  <script type="text/javascript" src="js/app/poster-call.js"></script>
 
 
   <title>Document</title>
@@ -58,63 +59,6 @@
       <h2 class="subheading">In Theaters Now</h2>
     </div>
     <div class="row poster-container">
-      <!-- DYNAMICALLY RENDER THE POSTERS HERE -->
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button open-modal">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button open-modal">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button open-modal">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button open-modal">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button open-modal">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button open-modal">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button open-modal">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
-      <div class="three columns image-container">
-        <div class="action-buttons">
-          <button class="list-button">ADD TO "WATCHED LIST"</button>
-          <button class="list-button">ADD TO A LIST</button>
-        </div>
-        <img src="http://placehold.it/200x300" alt="">
-      </div>
       <!-- Modal starts here -->
       <div class="modal" id="modal">
           <a href="#close" title="Close" class="close u-pull-right" id="close-btn"><i class="material-icons">close</i></a>
