Changed class to user-list-item

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <h2 class="modal-heading">Add To List...</h2>
           <hr>
           <ul class="list-container">
-            <a href="#"><li class="list-item">List #1</li></a>
-            <a href="#"><li class="list-item">List #2</li></a>
+            <a href="#"><li class="user-list-item">List #1</li></a>
+            <a href="#"><li class="user-list-item">List #2</li></a>
           </ul>
           <a href="#" class="new-list" id="make-list">Make a new list</a>
       </div>
