Structured the list-item container

--- a/user-lists.html
+++ b/user-lists.html
@@ -73,35 +73,26 @@
       <hr>
       <div class="six columns list-item">
         <div class="six columns list-image-container">
-          <img src="https://placehold.it/200x300" class="no-hover list-poster">
+          <div class="six columns">
+            <img src="https://placehold.it/200x300" class="no-hover list-poster">
+          </div>
+          <div class="six columns">
+            <img src="https://placehold.it/200x300" class="no-hover list-poster">
+          </div>
+          <div class="six columns">
+            <img src="https://placehold.it/200x300" class="no-hover list-poster">
+          </div>
+          <div class="six columns">
+            <img src="https://placehold.it/200x300" class="no-hover list-poster">
+          </div>
         </div>
         <div class="six columns">
-          <h4 class="list-title">Lorem Ipsum</h4>
+          <a href="#"><h4 class="list-title">Lorem Ipsum</h4></a>
           <p class="basic-para list-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur debitis optio, soluta aliquid quidem excepturi, neque, qui hic id ab vero voluptatem.</p>
           <p class="basic-para number-of-items"># of Films</p>
         </div>
-    </div>
-    <div class="six columns list-item">
-      <div class="six columns list-image-container">
-        <img src="https://placehold.it/200x300" class="no-hover list-poster">
       </div>
-      <div class="six columns">
-        <h4 class="list-title">Lorem Ipsum</h4>
-        <p class="basic-para list-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur debitis optio, soluta aliquid quidem excepturi, neque, qui hic id ab vero voluptatem.</p>
-        <p class="basic-para number-of-items"># of Films</p>
-      </div>
-  </div>
-  <div class="six columns list-item">
-    <div class="six columns list-image-container">
-      <img src="https://placehold.it/200x300" class="no-hover list-poster">
     </div>
-    <div class="six columns">
-      <h4 class="list-title">Lorem Ipsum</h4>
-      <p class="basic-para list-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur debitis optio, soluta aliquid quidem excepturi, neque, qui hic id ab vero voluptatem.</p>
-      <p class="basic-para number-of-items"># of Films</p>
-    </div>
-</div>
-  </div>
   </div>
   <!-- .push div is used to make the sticky footer -->
   <div class="push"></div>
