--- a/index.html
+++ b/index.html
@@ -59,18 +59,7 @@
       <h2 class="subheading">In Theaters Now</h2>
     </div>
     <div class="row poster-container">
-      <!-- Modal starts here -->
-      <div class="modal" id="modal">
-          <a href="#close" title="Close" class="close u-pull-right" id="close-btn"><i class="material-icons">close</i></a>
-          <h2 class="modal-heading">Add To List...</h2>
-          <hr>
-          <ul class="list-container">
-            <a href="#"><li class="user-list-item">List #1</li></a>
-            <a href="#"><li class="user-list-item">List #2</li></a>
-          </ul>
-          <a href="#" class="new-list" id="make-list">Make a new list</a>
-      </div>
-      <div class="modal-overlay" id="modal-overlay"></div>
+      <!-- DOM MANIPULATION HERE -->
     </div>
   </div>
   <!-- .push div is used to make the sticky footer -->
