Restructured the jumbotron

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 <body>
   <!-- jumbotron starts here -->
   <div class="jumbotron">
-    <div class="row">
-      <h1 class="tagline">Lorem Ipsum<br>Dolar Sit Amet</h1>
-    </div>
-    <div class="row">
-      <input type="search" placeholder="Search..." class="nav-search" id="search">
+    <div class="container">
+      <div class="row">
+        <h1 class="tagline">Lorem Ipsum<br>Dolar Sit Amet</h1>
+      </div>
+      <div class="row">
+        <input type="search" placeholder="Search..." class="nav-search six columns" id="search">
+      </div>
     </div>
   </div>
   <!-- Page's main content starts here -->
