Added id's for click events

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="row">
         <h1 class="tagline">Lorem Ipsum<br>Dolar Sit Amet</h1>
       </div>
-      <div class="row">
+      <div class="row search-container">
         <input type="search" placeholder="Search..." class="nav-search six columns" id="search">
       </div>
     </div>
@@ -45,7 +45,7 @@
   <!-- Page's main content starts here -->
   <div class="container">
     <div class="row">
-      <h2 class="subheading">In Theaters Now</h2>
+      <h2 class="subheading"><span id="subheading">In Theaters Now</span></h2>
     </div>
     <div class="row poster-container">
       <!-- DOM MANIPULATION HERE -->
