Created a "In Theaters Now" Button in the jumbotron

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <h1 class="tagline">Lorem Ipsum<br>Dolar Sit Amet</h1>
       </div>
       <div class="row search-container">
-        <input type="search" placeholder="Search..." class="nav-search six columns" id="search">
+        <input type="search" placeholder="Search..." class="nav-search eight columns" id="search">
+        <button class="jumbo-btn six columns u-full-width">In Theaters Now</button>
       </div>
+
+
     </div>
   </div>
   <!-- Page's main content starts here -->
@@ -56,6 +59,6 @@
   <footer>
     <p class="footer-content">&copy; Group Name 2017</p>
   </footer>
-  <script type="text/javascript" src="js/app/poster-call.js"></script>  
+  <script type="text/javascript" src="js/app/poster-call.js"></script>
 </body>
 </html>
