--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
   <!-- <script type="text/javascript" src="js/app/modal.js"></script> -->
 
 
-  <title>Document</title>
+  <title>ReelVue</title>
 </head>
 <body>
   <!-- jumbotron starts here -->
   <div class="jumbotron">
-    <div class="container">
+    <div class="container header">
       <div class="row">
-        <h1 class="tagline">Lorem Ipsum<br>Dolar Sit Amet</h1>
+        <h1 class="tagline">ReelVue</h1>
+        <h5 class="sub-tagline">Movie Search. Simplified.</h5>
       </div>
       <div class="row search-container">
         <input type="search" placeholder="Search..." class="nav-search eight columns" id="search">
